Need to share with other computer

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,20 @@
     <artifactId>GameScript</artifactId>
     <version>1.0</version>
 
+
+    <properties>
+        <maven.compiler.target>14.0</maven.compiler.target>
+        <maven.compiler.source>14.0</maven.compiler.source>
+    </properties>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.8-1</version>
+        </dependency>
+    </dependencies>
+
     
 </project>
